<resources>
    <string name="app_name">Weather app</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind_speed">Wind speed</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="pressure_value">%d mm Hg</string>
    <string name="wind_speed_value">%.1f km/h</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="no_internet_connection">No internet connection. Please check your internet connection and try again.</string>
</resources>
